# telescope-mamba

./: .gitignore  README.md  dev.env
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  activations.py  graph.py  models.py  weights.py
backend/app/core/: __init__.py  distribution.py  graph_extractor.py  model_registry.py  model_wrapper.py
backend/app/schemas/: __init__.py  graph.py  models.py  weights.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/DistributionPane/: index.tsx
frontend/src/components/GraphPane/: LayerNode.tsx  index.tsx
frontend/src/store/: appStore.ts
