[project]
name = "telescope-backend"
version = "0.1.0"
description = "Deep learning model weight/activation inspector for Mamba-transformer hybrid models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "safetensors>=0.4.0",
    "zarr>=2.18.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
# PyTorch needs to be installed separately with CUDA index
# uv add torch --index-url https://download.pytorch.org/whl/cu121
# mamba-ssm needs special flags:
# uv pip install mamba-ssm[causal-conv1d] --no-build-isolation

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
